// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SimpleCard /> > renders as expected based on provided props 1`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary"
  >
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> > renders as expected based on provided props 2`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary"
  >
    <div
      class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border"
    >
      <h5>
        Hello
      </h5>
    </div>
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> > renders as expected based on provided props 3`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary"
  >
    <div
      class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border"
    >
      <h6>
        Hello
      </h6>
    </div>
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> > renders as expected based on provided props 4`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary"
  >
    <div
      class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border"
    >
      <h5>
        Hello
      </h5>
    </div>
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> > renders as expected based on provided props 5`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary"
  >
    <div
      class="px-4 py-3 rounded-t-md bg-lm-primary dark:bg-dm-primary border-b border-lm-border dark:border-dm-border"
    >
      <h4>
        Hello
      </h4>
    </div>
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    />
  </div>
</div>
`;
